Fixed user dropdown appearing below scrollbar

--- a/resources/stylesheets/components/chat.scss
+++ b/resources/stylesheets/components/chat.scss
@@ -89,9 +89,6 @@
 .user-dropdown,
 .profile-box {
   background: #ffffff;
-}
-
-.profile-box {
   z-index: 10001;
 }
 
